<resources>
    <string name="app_name">RSSchool Task 4</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="first_parameter">Name</string>
    <string name="second_parameter">Color</string>
    <string name="third_parameter">Breed</string>
    <string name="fourth_parameter_alias">id</string>
    <string name="main_screen_title">Main</string>
    <string name="adding_items_screen_title">Add animal information</string>
    <string name="updating_items_screen_title">Update animal information</string>
    <string name="toolbar_icon_hint">Settings</string>
    <string name="database_scheme_preference_category">Database scheme</string>
    <string name="sort_preference_category">Sort by</string>
    <string name="preference_room_switcher">Room</string>
    <string name="preferences_fragment_title">Settings</string>
    <string name="list_preference_title">Choose parameter</string>
    <string name="exit_dialog_question">Are you sure you want to exit?</string>
    <string name="positive_answer">Yep, I\'m sure!</string>
    <string name="negative_answer">Nah!</string>
    <string name="update_button_description">Update</string>
    <string name="delete_button_description">Delete</string>
    <string name="add_button_description">Add</string>
    <string name="text_for_empty_screen">There are no records for the moment, please add new one.</string>
    <string name="database_room_scheme">Room scheme</string>
    <string name="database_cursors_scheme">Cursors scheme</string>

    <string-array name="sorting_parameters">
        <item>Name Ascending</item>
        <item>Name Descending</item>
        <item>Color Ascending</item>
        <item>Color Descending</item>
        <item>Breed Ascending</item>
        <item>Breed Descending</item>
        <item>Initial Order</item>
    </string-array>

    <string-array name="sorting_parameters_alias">
        <item>first_parameter_asc</item>
        <item>first_parameter_desc</item>
        <item>second_parameter_asc</item>
        <item>second_parameter_desc</item>
        <item>third_parameter_asc</item>
        <item>third_parameter_desc</item>
        <item>@string/fourth_parameter_alias</item>
    </string-array>
</resources>